# routes/api.php
@@ -1,19 +1,33 @@
 <?php
 
-use Illuminate\Http\Request;
+use App\Http\Controllers\Api\v1\UserController;
 use Illuminate\Support\Facades\Route;
 
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider within a group which
-| is assigned the "api" middleware group. Enjoy building your API!
-|
-*/
+Route::prefix('v1')->group(function () {
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
+    Route::post('/feedback', [SupportController::class, 'send']);
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+    Route::prefix('verification')->group(function () {
+        Route::post('/sendverify', [UserController::class, 'sendOtp']);
+        Route::post('/verify', [UserController::class, 'verifyOtp']);
+    });
+
+
+    Route::post('/forgot-password', [AuthController::class, 'sendForgot']);
+    Route::post('/reset-password', [AuthController::class, 'reset']);
+
+    Route::resource('user', PhotoController::class)->only([
+        'show'
+    ]);
+
+    Route::group(['prefix' => 'user', 'middleware' => ['auth:api-user', 'phoneverified']], function () {
+        Route::get('/{id}', [UserController::class, 'show']);
+        Route::put('/{id}', [UserController::class, 'update']);
+        Route::delete('/{id}', [UserController::class, 'delete']);
+        Route::post('/update-token', [UserController::class, 'updateToken']);
+
+        Route::get('/purchases', [PurchaseController::class, 'index']);
+    });
 });
